fix(core): use `nowrap` for content in `value-decoration` (#3496)

--- a/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
+++ b/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
@@ -9,6 +9,7 @@
     box-sizing: content-box;
     color: var(--tui-text-01);
     animation: tuiPresent 1s;
+    white-space: nowrap;
 
     &._table {
         position: static;
